Removed the fix for videresend rolename and person name. Added fix for aktorvalg alignment

--- a/source/css/scss-altinn/objects/_blocks.scss
+++ b/source/css/scss-altinn/objects/_blocks.scss
@@ -38,6 +38,10 @@
   min-height: $spacer * 3;
   align-items: center;
 
+  .ai {
+    width: unset;
+  }
+
   .a-dot {
     margin-top: -5px;
     align-self: flex-start;
@@ -66,19 +70,6 @@
 
   .a-label {
     margin-top: -2px;
-  }
-}
-
-//ellipsis text
-.a-list-text-ellipsis {
-  float: left;
-  @include media-breakpoint-up( lg ) {
-    z-index: 10;
-    display: inline-block;
-    padding-right: 20px !important;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
   }
 }
 
